WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74580
Separate box alignment and box pack values into separate enums.
https://bugs.webkit.org/show_bug.cgi?id=74580
Summary
Separate box alignment and box pack values into separate enums.
Luke Macpherson
Reported
2011-12-14 19:46:42 PST
Separate box alignment and box pack values into separate enums.
Attachments
Patch
(13.03 KB, patch)
2011-12-14 19:48 PST
,
Luke Macpherson
no flags
Details
Formatted Diff
Diff
Patch for landing
(13.07 KB, patch)
2011-12-15 18:49 PST
,
Luke Macpherson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Luke Macpherson
Comment 1
2011-12-14 19:48:55 PST
Created
attachment 119362
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-15 15:44:37 PST
Comment on
attachment 119362
[details]
Patch Clearing flags on attachment: 119362 Committed
r102989
: <
http://trac.webkit.org/changeset/102989
>
WebKit Review Bot
Comment 3
2011-12-15 15:44:41 PST
All reviewed patches have been landed. Closing bug.
Kenneth Russell
Comment 4
2011-12-15 16:22:57 PST
After
r102989
there are crashes of many layout tests in debug mode reporting "SHOULD NEVER BE REACHED". A representative failure:
http://build.chromium.org/p/chromium.webkit/builders/Webkit%20Linux%20%28dbg%29/builds/1343
Click the "stdio" link and search for the above text. Going to roll out the patch after discussion with macpherson.
Kenneth Russell
Comment 5
2011-12-15 16:45:19 PST
Reverted
r102989
for reason: Caused SHOULD NOT BE REACHED assertions in debug builds. Committed
r102999
: <
http://trac.webkit.org/changeset/102999
>
Luke Macpherson
Comment 6
2011-12-15 16:56:29 PST
Spotted the problem - CSSPropertyWebkitBoxPack was missing return after macro, calling fall-through onto CSSPropertyWebkitBoxFlex case. Will update patch in a moment.
Luke Macpherson
Comment 7
2011-12-15 18:49:54 PST
Created
attachment 119537
[details]
Patch for landing
WebKit Review Bot
Comment 8
2011-12-15 22:42:21 PST
Comment on
attachment 119537
[details]
Patch for landing Rejecting
attachment 119537
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/10902567
WebKit Review Bot
Comment 9
2011-12-18 15:47:24 PST
Comment on
attachment 119537
[details]
Patch for landing Rejecting
attachment 119537
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: webkit-commit-queue/Source/WebKit/chromium/webkit --revision 114686 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 47>At revision 114686. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/10932396
Luke Macpherson
Comment 10
2011-12-18 19:08:02 PST
Comment on
attachment 119537
[details]
Patch for landing Clearing flags on attachment: 119537 Committed
r103209
: <
http://trac.webkit.org/changeset/103209
>
Luke Macpherson
Comment 11
2011-12-18 19:08:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug