Source/WebCore/css/CSSStyleSelector.cpp
@@ -3170,15 +3170,8 @@ void CSSStyleSelector::applyProperty(int id, CSSValue *value)
         HANDLE_INHERIT_AND_INITIAL_AND_PRIMITIVE(boxOrient, BoxOrient)
         return;
     case CSSPropertyWebkitBoxPack:
-    {
-        HANDLE_INHERIT_AND_INITIAL(boxPack, BoxPack)
-        if (!primitiveValue)
-            return;
-        EBoxAlignment boxPack = *primitiveValue;
-        if (boxPack != BSTRETCH && boxPack != BBASELINE)
-            m_style->setBoxPack(boxPack);
+        HANDLE_INHERIT_AND_INITIAL_AND_PRIMITIVE(boxPack, BoxPack)
         return;
-    }
     case CSSPropertyWebkitBoxFlex:
         HANDLE_INHERIT_AND_INITIAL_AND_PRIMITIVE(boxFlex, BoxFlex)
         return;
